--- a/css/perfil.css
+++ b/css/perfil.css
@@ -7,7 +7,7 @@
 
 body{
     display: flex;
-    background-image: url('/projeto_integrador/imagens/perfil/fundo.jpg');
+    background-image: url('/imagens/perfil/fundo.jpg');
     
     color: #f1f5f8;
 }
