--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,7 @@ body{
     align-items: center;
     width: 100vw;
     height: 10vh;
+    margin-bottom: 150px;
 }
 .botao_cabecalho{
     display: flex;
@@ -49,13 +50,31 @@ body{
 }
 .formulario{
     background: green;
-     display: flex;
+    display: flex;
     justify-content:center;
     align-items: center;
     margin-top: 100px;
 }
 .login {
+    padding: 20px;
+    margin-bottom: 20px;
 }
+
+.login input{
+    margin-bottom: 20px;
+    
+}
+
+
+#botao{
+    display: flex;
+    justify-content: center;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    
+    
+}
+
 .rodape{
     margin-top: 70vh;
 }
