--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,15 @@
 /*reset css*/
+@font-face {
+   font-family: playflix;
+   src: url(/fonte/BebasNeue-Regular.ttf);
+}
 * {
   margin: 0;
    box-sizing: border-box;
+   font-family: playflix;
 }
+
+
 
 
 body{
@@ -77,7 +84,7 @@ body{
 }
 
 .rodape{
-    margin-top: 70vh;
+    margin-top: 20vh;
 }
 
 .titulo-carousel{
@@ -87,7 +94,7 @@ body{
     margin-left: 10px;
     margin-top: 10px;
     font-size: 30px;
-    font-family: sans-serif;
+    font-family: playflix;
     
 }
 
@@ -96,15 +103,15 @@ body{
 .container-carrosel{
     display:flex;
     gap: 10px;
-    margin-top: 200px;
+    margin-top: 100px;
 }
 
 .carousel {
     position: relative;
     width: 80%;
-    max-width: 800px;
+    max-width: 600px;
     overflow: hidden;
-    border-radius: 10px;
+    border-radius: 20px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -146,8 +153,8 @@ body{
 }
 
 .imagem_carrosel{
-    width: 500px;
-    height: 500px;
+    width: 300px;
+    height: 300px;
 }
 main{
     display: flex;
