--- a/css/senha.css
+++ b/css/senha.css
@@ -1,6 +1,14 @@
-.rodape{
-    margin-top: 70vh;
+/*reset css*/
+@font-face {
+   font-family: playflix;
+   src: url(/fonte/BebasNeue-Regular.ttf);
 }
+* {
+  margin: 0;
+   box-sizing: border-box;
+   font-family: playflix;
+}
+
 
 body{
     display: flex;
@@ -12,8 +20,8 @@ body{
 .cabecalho{
     display: flex;
     align-items: center;
-    width: 100vw;
-    height: 10vh;
+    width: 500px;
+    height: 5vh;
     margin-bottom: 220px;
 }
 .botao_cabecalho{
@@ -47,4 +55,8 @@ body{
 #continuar {
     
     margin-top: 20px;
+}
+
+.rodape{
+    margin-top: 20vh;
 }
