--- a/css/perfil.css
+++ b/css/perfil.css
@@ -12,7 +12,7 @@
 
 body{
     display: flex;
-    background-image: url('../imagens/perfil/fundo.jpg');
+     background-color: #1C1C1C;
     
     color: #f1f5f8;
 }
