--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -9,14 +9,55 @@
    font-family: playflix;
 }
 
-.rodape{
-    margin-top: 20vh;
+
+
+.navbar {
+    
+    padding: 10px 20px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
+
+.navbar-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.navbar-logo img {
+    height: 100px;
+}
+
+.navbar-menu {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+}
+
+.navbar-item {
+    position: relative;
+}
+
+.navbar-link {
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    transition: color 0.3s ease;
+}
+
+.navbar-link:hover {
+    color: #fd0606;
 }
 
 body{
     display: flex;
     flex-direction: column;
-    background-image: url('/projeto_integrador/imagens/perfil/fundo.jpg');
+     background-color: #1C1C1C;
     color: rgba(241, 245, 248, 0.5);
 }
 
@@ -42,6 +83,8 @@ body{
 .formulario{
     display: flex;
     justify-content: center;
+    margin-top: 250px;
+    
 }
 
 .cadastro{
@@ -55,7 +98,7 @@ body{
     border-radius: 8px;
     background-color: #f9f9f9;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 100%;
+    width: 400px;
 }
 
 .cadastro input {
@@ -93,3 +136,6 @@ body{
     text-decoration: none;
 }
 
+.rodape{
+    margin-top: 20vh;
+}
