--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -57,8 +57,8 @@
 body{
     display: flex;
     flex-direction: column;
-     background-color: #1C1C1C;
-    color: rgba(241, 245, 248, 0.5);
+    background-color: #1C1C1C;
+    color: #f1f5f8;
 }
 
 .cabecalho{
@@ -80,62 +80,45 @@ body{
 }
 
 
-.formulario{
+.formulario {
+   
     display: flex;
-    justify-content: center;
-    margin-top: 250px;
-    
+    justify-content:center;
+    align-items: center;
+    margin-top: 100px;
+    text-decoration: none;
 }
 
 .cadastro{
-    color: black;
-    font-size: 18px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 30px;
+    padding: 20px;
+    margin-bottom: 20px;
+    margin-top: 200px;
+    font-size: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
-    background-color: #f9f9f9;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
+    background-color:  rgba(0, 0, 0, 1.1);
 }
+
 
 .cadastro input {
-    color: black;
-    text-align: center;
-    width: 100%;
-    height: 20px;
-    border-radius: 5px;
+    margin-bottom: 20px;
+    margin: 10px;
 }
 
-.cadastro button {
-    padding: 10px;
-    margin: auto;
-    border-radius: 10px;
-    background: transparent;
-    color: #f1f5f8;
-    transition: border-color 0.3s ease; /* Suaviza a transição da cor da borda */
-    background-color: #007bff;
+
+
+#botao-cadastrra{
+    display: flex;
+    justify-content: center;
+    border-radius: 5px;
+    margin-bottom: 20px;
     
-} 
-
-
-.botao{
-    padding: 10px;
-    margin: auto;
-    border-radius: 10px;
-    background: transparent;
-    color: #f1f5f8;
-    transition: border-color 0.3s ease; /* Suaviza a transição da cor da borda */
-    background-color: #007bff;
 }
 
  a {
-    color: #f1f5f8;
     text-decoration: none;
 }
 
 .rodape{
-    margin-top: 20vh;
+    margin-top: 45vh;
 }
