--- a/css/senha.css
+++ b/css/senha.css
@@ -17,22 +17,50 @@ body{
     color: #f1f5f8;
 }
 
-.cabecalho{
+.navbar {
+    
+    padding: 10px 20px;
+    position:static;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
+
+.navbar-container {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    width: 500px;
-    height: 5vh;
-    margin-bottom: 220px;
+    max-width: 1200px;
+    margin: 0 auto;
+    margin-bottom: 200px;
 }
-.botao_cabecalho{
+
+.navbar-logo img {
+    height: 100px;
+}
+
+.navbar-menu {
+    list-style: none;
     display: flex;
-    justify-content: flex-end;
-    align-items: center; 
-    margin-left: auto;
-    height: 100%;
-    padding-right: 10px;
-    gap: 10px;
+    gap: 20px;
 }
+
+.navbar-item {
+    position: relative;
+}
+
+.navbar-link {
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+    transition: color 0.3s ease;
+}
+
+.navbar-link:hover {
+    color: #fd0606;
+}
+
 
 .formulario{
     display: flex;
@@ -58,5 +86,5 @@ body{
 }
 
 .rodape{
-    margin-top: 20vh;
+    margin-top: 45vh;
 }
