--- a/css/filmes.css
+++ b/css/filmes.css
@@ -65,7 +65,8 @@ ul li {
 }
 
 body{
-   background-image: url('/imagens/perfil/fundo.jpg');
+   /* background-image: url('/imagens/perfil/fundo.jpg') */
+   background-color: #1C1C1C;
    
 }
 
@@ -102,4 +103,10 @@ div{
 
 .rodape{
     margin-top: 20vh;
+    color: #fff;
+}
+
+.hr-footer{
+    width: 100%;
+    height: 1px;
 }
