--- a/css/login.css
+++ b/css/login.css
@@ -133,5 +133,26 @@ h5 {
 
 
 .rodape{
-    margin-top: 45vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20vh;
+    
+    
+}
+
+.rodape-texto {
+    width: 90%;
+    
+}
+
+.rodape-texto h5 {
+    text-align: center;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.hr-footer{
+    width: 100%;
+    height: 1px;
 }
