--- a/css/login.css
+++ b/css/login.css
@@ -1,158 +1,193 @@
-/*reset css*/
+/* Reset CSS */
 @font-face {
-   font-family: playflix;
-   src: url(/fonte/BebasNeue-Regular.ttf);
-}
-* {
-  margin: 0;
+    font-family: playflix;
+    src: url(/fonte/BebasNeue-Regular.ttf);
+ }
+ * {
+   margin: 0;
    box-sizing: border-box;
    font-family: playflix;
-}
+ }
+ 
+ .navbar {
+     padding: 10px 20px;
+     position: static;
+     width: 100%;
+     top: 0;
+     left: 0;
+     z-index: 1000;
+ }
+ 
+ .navbar-container {
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+     max-width: 1200px;
+     margin: 0 auto;
+ }
+ 
+ .navbar-logo img {
+     height: 100px;
+ }
+ 
+ .navbar-menu {
+     list-style: none;
+     display: flex;
+     gap: 20px;
+ }
+ 
+ .navbar-item {
+     position: relative;
+ }
+ 
+ .navbar-link {
+     color: #fff;
+     text-decoration: none;
+     font-size: 20px;
+     transition: color 0.3s ease;
+ }
+ 
+ .navbar-link:hover {
+     color: #fd0606;
+ }
+ 
+ body {
+     display: flex;
+     flex-direction: column;
+     background-color: #1C1C1C;
+     color: #f1f5f8;
+ }
+ 
+ .formulario {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     margin-top: 100px;
+     text-decoration: none;
+ }
+ 
+ .login {
+     padding: 20px;
+     margin: 20px;
+     font-size: 20px;
+     border: 1px solid #ccc;
+     border-radius: 8px;
+     background-color: rgba(0, 0, 0, 1.1);
+     width: 100%;
+     max-width: 400px; /* Ajuste a largura máxima do formulário */
+ }
+ 
+ .login label {
+     display: block;
+     margin-bottom: 5px;
+ }
+ 
+ .input-container {
+     display: flex;
+     align-items: center;
+     margin-bottom: 15px;
+ }
+ 
+ .login input {
+     width: 100%; /* Faz com que o input ocupe toda a largura disponível */
+     padding: 10px;
+     border: 1px solid #666;
+     border-radius: 4px; /* Adiciona bordas arredondadas aos campos de entrada */
+ }
+ 
 
+ a {
+     text-decoration: none;
+ }
+ 
+ #botao-entra {
+     display: flex;
+     justify-content: center;
+     border-radius: 5px;
+     margin-bottom: 20px;
+ }
+ 
+ .button-confirma {
+     text-decoration: none;
+ }
 
-
-
-.navbar {
+ button {
+    background-color: rgba(0, 0, 0, 1.1);
     
-    padding: 10px 20px;
-    position:static;
-    width: 100%;
+     color: #fff;
+     padding: 10px 20px;
+     border: none;
+     border-radius: 4px;
+     cursor: pointer;
+     font-size: 16px;
+     text-align: center;
+     text-decoration: none;
+ }
+
+
+ 
+ button:hover {
+    background-color: #0056b3 ;
+    border: #ccc;
+ }
+ 
+ h5 {
+     margin-top: 10px;
+ }
+ 
+ .rodape {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     margin-top: 20vh;
+ }
+ 
+ .rodape-texto {
+     width: 90%;
+ }
+ 
+ .rodape-texto h5 {
+     text-align: center;
+     padding: 10px;
+     font-family: Arial, Helvetica, sans-serif;
+ }
+ 
+ .hr-footer {
+     width: 100%;
+     height: 1px;
+ }
+
+ .required-popup::after {
+    content: "*Campo obrigatório";
+    position: absolute;
     top: 0;
-    left: 0;
-    z-index: 1000;
+    right: 0;
+    color: #992020;
+    font-size: .65rem;
+    padding: .2rem .3rem;
+    width: auto;
+    display: block;
+    background-color: #202020;
+  }
+  
+  input.error {
+    border: solid 2px #992020;
+    background-color: #CCBBBB;
+    color: #662020;
+  }
+  
+  input.correct {
+    background-color: #BBCCBB;
+    border: solid 2px #206620;
+    color: #206620;
+  }
+  
+  .helper-text {
+    display: none; /* Oculta por padrão */
+    color: red;
+    font-size: 0.875em;
+    margin-top: 5px;
 }
-
-.navbar-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.navbar-logo img {
-    height: 100px;
-}
-
-.navbar-menu {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-}
-
-.navbar-item {
-    position: relative;
-}
-
-.navbar-link {
-    color: #fff;
-    text-decoration: none;
-    font-size: 20px;
-    transition: color 0.3s ease;
-}
-
-.navbar-link:hover {
-    color: #fd0606;
-}
-
-    
-
-body{
-    display: flex;
-    flex-direction: column;
-    background-color: #1C1C1C;
-    color: #f1f5f8;
-}
-
-
-
-
-
-.botao{
-    padding: 10px;
-    margin: auto;
-    border-radius: 10px;
-    background: transparent;
-    color: #f1f5f8;
-    transition: border-color 0.3s ease; /* Suaviza a transição da cor da borda */
-    background-color: #007bff;
-    
-}
-
-.botao a{
-    color: #fff;
-    text-decoration: none;
-}
-
-/* Efeito de hover */
-.botao:hover {
-    border-color: #f1f5f8; /* Muda a cor da borda ao passar o mouse */
-}
-.formulario {
-   
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    margin-top: 100px;
-    text-decoration: none;
-}
-.login {
-    padding: 20px;
-    margin-bottom: 20px;
-    margin-top: 200px;
-    font-size: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color:  rgba(0, 0, 0, 1.1);
-    
-    
-}
-
-.login input{
-    margin-bottom: 20px;
-    margin: 10px;
-   
-    
-}
-
-a{
-    text-decoration: none;
-}
-
-#botao-entra {
-    display: flex;
-    justify-content: center;
-    border-radius: 5px;
-    margin-bottom: 20px;  
-}
-
-h5 {
-    margin-top: 10px;
-}
-
-
-
-.rodape{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20vh;
-    
-    
-}
-
-.rodape-texto {
-    width: 90%;
-    
-}
-
-.rodape-texto h5 {
-    text-align: center;
-    padding: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.hr-footer{
-    width: 100%;
-    height: 1px;
-}
+.visible {
+    display: block;
+  }
