--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -14,7 +14,7 @@
 .navbar {
     
     padding: 10px 20px;
-    position: fixed;
+    position: flex;
     width: 100%;
     top: 0;
     left: 0;
@@ -85,14 +85,16 @@ body{
     display: flex;
     justify-content:center;
     align-items: center;
-    margin-top: 100px;
+    margin-bottom: 10px;
     text-decoration: none;
+ 
 }
 
 .cadastro{
+    width: 500px;
     padding: 20px;
     margin-bottom: 20px;
-    margin-top: 200px;
+    margin-top: 10px;
     font-size: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
@@ -100,9 +102,8 @@ body{
 }
 
 
-.cadastro input {
-    margin-bottom: 20px;
-    margin: 10px;
+.input-class{
+    width: 200px;
 }
 
 
@@ -143,3 +144,27 @@ body{
     width: 100%;
     height: 1px;
 }
+
+  input.error {
+    border: solid 2px #992020;
+    background-color: #CCBBBB;
+    color: #662020;
+  }
+  
+  input.correct {
+    background-color: #BBCCBB;
+    border: solid 2px #206620;
+    color: #206620;
+  }
+  
+   .helper-text {
+    display: none; 
+    color: red;
+    font-size: 0.875em;
+    margin-top: 5px;
+} 
+
+.visible {
+    display: block;
+  }
+
