--- a/css/em-construção.css
+++ b/css/em-construção.css
@@ -90,3 +90,82 @@ body{
     height: 1px;
 }
 
+.formulario {
+   
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    margin-bottom: 10px;
+    text-decoration: none;
+ 
+}
+
+.cadastro{
+    width: 500px;
+    padding: 20px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    font-size: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color:  rgba(0, 0, 0, 1.1);
+}
+
+
+.input-class{
+    width: 200px;
+}
+
+
+
+#botao-cadastrra{
+    display: flex;
+    justify-content: center;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    
+}
+
+ a {
+    text-decoration: none;
+}
+
+
+.rodape-texto {
+    width: 90%;
+    
+}
+
+.rodape-texto h5 {
+    text-align: center;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.hr-footer{
+    width: 100%;
+    height: 1px;
+}
+
+  input.error {
+    border: solid 2px #992020;
+    background-color: #CCBBBB;
+    color: #662020;
+  }
+  
+  input.correct {
+    background-color: #BBCCBB;
+    border: solid 2px #206620;
+    color: #206620;
+  }
+  
+   .helper-text {
+    display: none; 
+    color: red;
+    font-size: 0.875em;
+    margin-top: 5px;
+} 
+
+.visible {
+    display: block;
+  }
