Alteração página produtos, css

--- a/css/produtos.css
+++ b/css/produtos.css
@@ -1,27 +1,107 @@
-*{
-    margin: 0; padding: 0;
-  
-    }
-  
-  @font-face {
-   font-family:"niagato" ;
-   src: url(Fonte/Niagato.ttf);
-   }
-  
-  .logo{
-   height: 120px;
-   border-radius: 120px;
-   margin-top: 50px;
-   margin-bottom: 2%; 
-   width: 50%;
-   margin-left: 25%
+@font-face {
+  font-family: playflix;
+  src: url(/fonte/BebasNeue-Regular.ttf);
+
+ }
+*{ margin: 0;
+   padding: 0;
+   font-family: playflix;
+
   }
+
+  
+ .pai-corrosel{
+  display: flex;
+     align-items: center;
+     justify-content: center;
+     width: 100vw;
+     height: 5px;
+     margin-top: 100px;
+     margin-bottom: 100;  
+     
+ }
+ 
+ 
+ .titulo-carrosel{
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     width: 50vw;
+     height: 40px;
+     margin-top: 100px;
+     
+ }
+ 
+ .hr-right{
+     width: 50%;
+     height: 2px;
+ }
+ 
+ .hr-left{
+     width: 50%;
+     height: 2px;  
+     
+ }
+ 
+ .text-hr{
+     padding: 0 10px;
+     font-weight: bold;
+     color: white;
+     white-space: nowrap;
+     font-size: 40px;
+   
+ }
+ 
+
+.navbar {
+  
+  padding: 10px 20px;
+  position:static;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.navbar-logo img {
+  height: 100px;
+}
+
+.navbar-menu {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+}
+
+.navbar-item {
+  position: relative;
+}
+
+.navbar-link {
+  color: #fff;
+  text-decoration: none;
+  font-size: 20px;
+  transition: color 0.3s ease;
+}
+
+.navbar-link:hover {
+  color: #fd0606;
+}
+
   .carrinho{
     width: 50px;/*tamanho do carrinho*/
     height: 50px;/*tamanho do carrinho*/
     border-radius: 50px;
     margin-left: 90%;/*posição do carrinho-margem lateral*/
-    margin-bottom: 2%;/*margem entre o carrinho e os produtos*/
+    margin-bottom: 7%;/*margem entre o carrinho e os produtos*/
   
   }
  
@@ -121,73 +201,73 @@
       
       }
     .produto-1 .card-imagem{
-        background-image: url('/projeto_integrador/imagens/produtos/anne.jpeg')
+        background-image: url('/imagens/produtos/anne.jpeg')
         }
     .produto-1 .card-imagem:hover{
-    background-image:url('/projeto_integrador/imagens/produtos/anne_sinopse.jpeg');
+    background-image:url('/imagens/produtos/anne_sinopse.jpeg');
     }
     .produto-2 .card-imagem{
-    background-image:url('/projeto_integrador/imagens/produtos/Emily_in_Paris.jpeg'); 
+    background-image:url('/imagens/produtos/Emily_in_Paris.jpeg'); 
     }
     .produto-2 .card-imagem:hover{
-    background-image:url('/projeto_integrador/imagens/produtos/Emily_in_Paris_sinopse3.jpeg');
+    background-image:url('/imagens/produtos/Emily_in_Paris_sinopse3.jpeg');
     }
     .produto-3 .card-imagem{
-    background-image:url('/projeto_integrador/imagens/produtos/Coisa_mais_linda.jpeg');      
+    background-image:url('/imagens/produtos/Coisa_mais_linda.jpeg');      
     }
     .produto-3 .card-imagem:hover{
-    background-image:url(imagem/);
+    background-image:url('/projeto_integrador');
     } 
     .produto-4 .card-imagem{
-    background-image:url('/projeto_integrador/imagens/produtos/Durante_a_tormenta2.jpeg');
+    background-image:url('/imagens/produtos/Durante_a_tormenta2.jpeg');
     }
     .produto-4 .card-imagem:hover{
-    background-image:url(imagem/);
+    background-image:url('/em-contrucao.html');
     }    
     .produto-5 .card-imagem{
-    background-image:url('/projeto_integrador/imagens/produtos/Moxie.jpeg');
+    background-image:url('/imagens/produtos/Moxie.jpeg');
     }
     .produto-5 .card-imagem:hover{
-    background-image:url(imagem/);
+    background-image:url('/imagens/produtos/moxie_sinopse.jpeg');
     }    
     .produto-6 .card-imagem{
-    background-image:url('/projeto_integrador/imagens/produtos/Era_uma_segunda_vez.jpeg');
+    background-image:url('/imagens/produtos/Era_uma_segunda_vez.jpeg');
     }
     .produto-6 .card-imagem:hover{
     background-image:url(imagem/);
     }    
     .produto-7 .card-imagem{
-    background-image:url('/projeto_integrador/imagens/produtos/Fora_de_série.jpeg');
+    background-image:url('/imagens/produtos/Fora_de_série.jpeg');
     }
     .produto-7 .card-imagem:hover{
     background-image:url(imagem/);
     }    
     .produto-8 .card-imagem{
-    background-image:url('/projeto_integrador/imagens/produtos/Good_girls.jpeg');
+    background-image:url('/imagens/produtos/Good_girls.jpeg');
     }
     .produto-8 .card-imagem:hover{
     background-image:url(imagem/);
     }
     .produto-9 .card-imagem{
-    background-image:url('/projeto_integrador/imagens/produtos/Não_nasci_para_agradar.jpeg');
+    background-image:url('/imagens/produtos/Não_nasci_para_agradar.jpeg');
     }
     .produto-9 .card-imagem:hover{
     background-image:url(imagem/);
     }
     .produto-10 .card-imagem{
-    background-image:url('/projeto_integrador/imagens/produtos/Eu_não_sou_um_homem_fácil.jpeg');
+    background-image:url('/imagens/produtos/Eu_não_sou_um_homem_fácil.jpeg');
     }
     .produto-10 .card-imagem:hover{
     background-image:url(imagem/);
     }
     .produto-11 .card-imagem{
-    background-image:url('/projeto_integrador/imagens/produtos/Boys.jpeg');
+    background-image:url('/imagens/produtos/Boys.jpeg');
     }
     .produto-11 .card-imagem:hover{
     background-image:url(imagem/);
     }
     .produto-12 .card-imagem{
-    background-image:url('/projeto_integrador/imagens/produtos/A_boa_mentira.jpeg');
+    background-image:url('/imagens/produtos/A_boa_mentira.jpeg');
     }
     .produto-12 .card-imagem:hover{
     background-image:url(imagem/p);
@@ -249,4 +329,21 @@
       color:rgb(253, 10, 10);
       text-decoration:none;
     }
+
+
+   .rodape{
+    margin-top: 20vh;
+    color: #fff;
+    }
+   
+  .hr-footer{
+      width: 100%;
+      height: 1px;
+  }
+  
+
+  
+
+  
+
   
