--- a/css/produtos.css
+++ b/css/produtos.css
@@ -3,13 +3,7 @@
   src: url(/fonte/BebasNeue-Regular.ttf);
 
  }
-*{ margin: 0;
-   padding: 0;
-   font-family: playflix;
-
-  }
-
-  
+ 
  .pai-corrosel{
   display: flex;
      align-items: center;
@@ -94,6 +88,13 @@
 
 .navbar-link:hover {
   color: #fd0606;
+
+}
+
+* {
+  margin: 0;
+   box-sizing: border-box;
+   font-family: playflix;
 }
 
   .carrinho{
@@ -331,18 +332,34 @@
     }
 
 
-   .rodape{
-    margin-top: 20vh;
-    color: #fff;
-    }
    
+    .rodape{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 20vh;
+  }
+  
+  .rodape-texto {
+      width: 90%;
+      
+  }
+  
+  .rodape-texto h5 {
+      text-align: center;
+      padding: 10px;
+      font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  .rodape{
+      margin-top: 20vh;
+      color: #fff;
+  }
+  
   .hr-footer{
       width: 100%;
       height: 1px;
   }
-  
-
-  
 
   
 
