--- a/css/produtos.css
+++ b/css/produtos.css
@@ -1,12 +1,119 @@
+@font-face {
+  font-family:"playflix" ;
+  src: url(/fonte/BebasNeue-Regular.ttf);
+  }
+
 *{
     margin: 0; padding: 0;
   
     }
+    .navbar {
+    
+      padding: 10px 20px;
+      position:relative;
+      width: 100%;
+      top: 0;
+      left: 0;
+      z-index: 1000;
+  }
   
-  @font-face {
-   font-family:"niagato" ;
-   src: url(Fonte/Niagato.ttf);
+  .navbar-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 1200px;
+      margin: 0 auto;
+  }
+  
+  .navbar-logo img {
+      height: 100px;
+  }
+  
+  .navbar-menu {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+  }
+  
+  .navbar-item {
+      position: relative;
+  }
+  
+  .navbar-link {
+      color: #fff;
+      text-decoration: none;
+      font-size: 20px;
+      transition: color 0.3s ease;
+  }
+  
+  .navbar-link:hover {
+      color: #fd0606;
+  }
+  
+  
+
+
+   .pai-corrosel{
+    display: flex;
+       align-items: center;
+       justify-content: center;
+       width: 100vw;
+       height: 5px;
+       margin-top: 100px;
+       margin-bottom: 0;
+       
+       
+       
    }
+   
+   .pai-corrosel2{
+       display: flex;
+       align-items: center;
+       
+       width: 100vw;
+       height: 5px;
+       margin-top: 100px;
+       margin-bottom: 0;
+   
+       justify-content:start;
+       
+   }
+   
+   
+   .titulo-carrosel{
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       width: 50vw;
+       height: 40px;
+       margin-top: 100px;
+       
+      
+   
+   }
+   
+   .hr-right{
+       width: 50%;
+       height: 2px;
+   }
+   
+   .hr-left{
+       width: 50%;
+       height: 2px;
+      
+       
+   }
+   
+   
+   
+   .text-hr{
+       padding: 0 10px;
+       font-weight: bold;
+       color: white;
+       white-space: nowrap;
+       font-size: 40px;
+   }
+   
   
   .logo{
    height: 120px;
