--- a/css/index.css
+++ b/css/index.css
@@ -219,10 +219,21 @@ main{
     margin-left: 30px;
 
     }
-    .filmes img{
+    .filmes img {
         width: 250px;
         height: 200px;
         padding: 10px;
+        cursor: pointer;
+        transition: transform 0.3s ease, border 0.3s ease;
+
+       
+    }
+    
+    .filmes img:hover {
+        transform: scale(1.1); 
+        border: 2px solid #fff;
+        
+        
     }
 
 .rodape{
