removido smellcode de algumas paginas e estilos, adicionado efeitos de css na pagina de produtos

--- a/css/produtos.css
+++ b/css/produtos.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: playflix;
   src: url(/fonte/BebasNeue-Regular.ttf);
+  color: #fff;
 
  }
  
@@ -95,17 +96,11 @@
   margin: 0;
    box-sizing: border-box;
    font-family: playflix;
+  
+   text-decoration: none;
 }
 
-  .carrinho{
-    width: 50px;/*tamanho do carrinho*/
-    height: 50px;/*tamanho do carrinho*/
-    border-radius: 50px;
-    margin-left: 90%;/*posição do carrinho-margem lateral*/
-    margin-bottom: 7%;/*margem entre o carrinho e os produtos*/
   
-  }
- 
   body{
       background-color: rgb(19, 16, 14)
     }
@@ -116,18 +111,16 @@
       justify-content: center;
     }
    
-  /*cabeçalho*/
-  
   h3 {
   text-align:center;
-  color: rgb(255, 0, 0);
+  color:#fff;
   margin: 1,5rem;
   margin-bottom: 1px;
   } 
   
   h4{
     margin-bottom: 1.5rem; margin-top: 1.5rem;
-    color: rgb(255, 0, 0);
+    color:#fff;
   }
   .titulo-certificados{
     margin-bottom: 0px;
@@ -185,15 +178,14 @@
     }
   
   .card {
-  border:2px solid rgb(236, 51, 51);
+ 
+  padding: 10px;
   border-radius:5px;
+  cursor: pointer;
+  transition: transform 0.3s ease, border 0.3s ease;
   }
   
-  .card-imagem:hover{
-    background-color: rgb(236, 51, 51);
-    color: rgb(18, 16, 15);
-    border-color: rgb(236, 164, 164);
-    }
+
     .card-imagem {
       height:300px;
       width: 100%;
@@ -201,97 +193,96 @@
       transition:.5s;
       
       }
+      .card-imagem::after {
+        content: '';
+        background-image: url('/imagens/produtos/play.png'); 
+        background-size: contain;
+        background-repeat: no-repeat;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 30%; 
+        height: 30%; 
+        transform: translate(-50%, -50%); 
+        opacity: 0;
+        transition: opacity 0.3s ease;
+      }
+      
+      .card-imagem:hover::after {
+        opacity: 1; 
+      }
+      
+      .card-imagem:hover {
+        transform: scale(1.1); 
+        border: 2px solid #fff;
+      }
     .produto-1 .card-imagem{
         background-image: url('/imagens/produtos/anne.jpeg')
         }
-    .produto-1 .card-imagem:hover{
-    background-image:url('/imagens/produtos/anne_sinopse.jpeg');
-    }
+   
     .produto-2 .card-imagem{
     background-image:url('/imagens/produtos/Emily_in_Paris.jpeg'); 
     }
-    .produto-2 .card-imagem:hover{
-    background-image:url('/imagens/produtos/Emily_in_Paris_sinopse3.jpeg');
-    }
+   
     .produto-3 .card-imagem{
     background-image:url('/imagens/produtos/Coisa_mais_linda.jpeg');      
     }
-    .produto-3 .card-imagem:hover{
-    background-image:url('/projeto_integrador');
-    } 
+    
     .produto-4 .card-imagem{
     background-image:url('/imagens/produtos/Durante_a_tormenta2.jpeg');
     }
-    .produto-4 .card-imagem:hover{
-    background-image:url('/em-contrucao.html');
-    }    
+    
     .produto-5 .card-imagem{
     background-image:url('/imagens/produtos/Moxie.jpeg');
     }
-    .produto-5 .card-imagem:hover{
-    background-image:url('/imagens/produtos/moxie_sinopse.jpeg');
-    }    
+      
     .produto-6 .card-imagem{
     background-image:url('/imagens/produtos/Era_uma_segunda_vez.jpeg');
     }
-    .produto-6 .card-imagem:hover{
-    background-image:url(imagem/);
-    }    
+      
     .produto-7 .card-imagem{
     background-image:url('/imagens/produtos/Fora_de_série.jpeg');
     }
-    .produto-7 .card-imagem:hover{
-    background-image:url(imagem/);
-    }    
+    
     .produto-8 .card-imagem{
     background-image:url('/imagens/produtos/Good_girls.jpeg');
     }
-    .produto-8 .card-imagem:hover{
-    background-image:url(imagem/);
-    }
+   
     .produto-9 .card-imagem{
     background-image:url('/imagens/produtos/Não_nasci_para_agradar.jpeg');
     }
-    .produto-9 .card-imagem:hover{
-    background-image:url(imagem/);
-    }
+    
     .produto-10 .card-imagem{
     background-image:url('/imagens/produtos/Eu_não_sou_um_homem_fácil.jpeg');
     }
-    .produto-10 .card-imagem:hover{
-    background-image:url(imagem/);
-    }
+    
     .produto-11 .card-imagem{
     background-image:url('/imagens/produtos/Boys.jpeg');
     }
-    .produto-11 .card-imagem:hover{
-    background-image:url(imagem/);
-    }
+    
     .produto-12 .card-imagem{
     background-image:url('/imagens/produtos/A_boa_mentira.jpeg');
     }
-    .produto-12 .card-imagem:hover{
-    background-image:url(imagem/p);
-    }
+    
   
-  .botao__comprar:hover{
-  background-color: rgba(247, 6, 42, 0.66);
-  color: rgba(250, 7, 59, 0.938);
-  border-color: rgb(204, 227, 243);
-  
-  }
-  .botao__comprar{
-  border:4px solid rgb(245, 5, 17);
-  width:40%;
-  padding:0.3rem;
-  border-radius:10px;
-  }
-  .botao__comprar{
+
+
+
+    .botao__comprar {
+      width: 40%;
+      padding: 0.3rem;
+      border-radius: 10px;
       margin-left: auto;
       margin-right: auto;
       margin-top: 5px;
       text-decoration: none;
-     
+      color: #fff;
+      
+    }
+    
+    .botao__comprar:hover {
+      color: #fd0606;
+      border-color: rgb(204, 227, 243);
     }
    
   .card-description{
