--- a/css/login.css
+++ b/css/login.css
@@ -1,7 +1,7 @@
 /* Reset CSS */
 @font-face {
     font-family: playflix;
-    src: url(/fonte/BebasNeue-Regular.ttf);
+    src: url('https://raw.githubusercontent.com/lucasscardoso/projeto_integrador/main/fonte/BebasNeue-Regular.ttf') format('truetype');
  }
  * {
    margin: 0;
