--- a/css/produtos.css
+++ b/css/produtos.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: playflix;
-  src: url(/fonte/BebasNeue-Regular.ttf);
+  src: url('https://raw.githubusercontent.com/lucasscardoso/projeto_integrador/main/fonte/BebasNeue-Regular.ttf') format('truetype');
   
 
  }
